Removing Duplicated code Added branch chooser at main screen added option to return all branches ids from StockManagementFacade Adding remove item support